@@ -3,6 +3,7 @@
 *
 
 - Scripts can be used as instance source in instance discovery DCIs
+- NXSL node object attribute snmpSysDescription renamed back to sysDescription
 
 
 *
@@ -36,7 +37,7 @@
 	- Dashboards can be associated with other objects (nodes, containers, etc.) and opened from object's context menu
 	- Forced DCI polls from summary tables
 	- Script hints
-- Fixed issues: #786, #831, #841, #852, #864, #878, #883, #890, #891, #892, #896, #897, #898, #900, #902, #903, #905, #907, #910, #913, #917, #919, #921, #928, #933, #937, #943, #945, #947
+- Fixed issues: #786, #831, #841, #852, #864, #878, #883, #886, #890, #891, #892, #896, #897, #898, #900, #902, #903, #905, #907, #910, #913, #917, #919, #921, #928, #933, #937, #943, #945, #947
 
 
 *
